--- a/src/app/fight/fight.html
+++ b/src/app/fight/fight.html
@@ -1,2 +1,3 @@
 <enemies-fight-display></enemies-fight-display>
+<!--<a href="/"><button class="btn btn-primary">Go Home</button></a>-->
 <allies-fight-display></allies-fight-display>
