--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,3 +1,1 @@
-<div class="container text-center">
-  <a href="#fight"><button class="btn btn-primary">Fight!</button></a>
-</div>
+<character-select></character-select>
