fight queue added

--- a/src/app/components/alliesFightDisplay/alliesFightDisplay.html
+++ b/src/app/components/alliesFightDisplay/alliesFightDisplay.html
@@ -23,7 +23,8 @@
       </div>
 
       <div class="text-center">
-        <div class="center-me dropup" uib-dropdown>
+        <div class="center-me dropup"
+             uib-dropdown>
           <button role="button"
                   class="btn btn-default"
                   uib-dropdown-toggle
