--- a/src/app/components/characterSelect/characterSelect.html
+++ b/src/app/components/characterSelect/characterSelect.html
@@ -18,7 +18,7 @@
 
 <div class="text-center">
   <a href="#fight" ng-class="{'disabled-link' : characterSelect.activeSelection === undefined}">
-    <button class="btn btn-primary"
+    <button class="btn btn-default"
             ng-click="characterSelect.confirmClass()"
             ng-class="{'disabled' : characterSelect.activeSelection === undefined}">
     Confirm Class</button></a>
