moved fight from own page to directive

--- a/src/app/components/characterSelect/characterSelect.html
+++ b/src/app/components/characterSelect/characterSelect.html
@@ -17,11 +17,10 @@
 </div>
 
 <div class="text-center">
-  <a href="#fight" ng-class="{'disabled-link' : characterSelect.activeSelection === undefined}">
-    <button class="btn btn-default"
-            ng-click="characterSelect.confirmClass()"
-            ng-class="{'disabled' : characterSelect.activeSelection === undefined}">
-    Confirm Class</button></a>
+  <button class="btn btn-default"
+          ng-click="characterSelect.confirmClass()"
+          ng-class="{'disabled' : characterSelect.activeSelection === undefined}">
+    Confirm Class</button>
 </div>
 
 
