--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,1 +1,2 @@
-<character-select></character-select>
+<character-select ng-if="stateChangeService.playerState === 'characterSelect'"></character-select>
+<fight-display ng-if="stateChangeService.playerState === 'fight'"></fight-display>
