fixed exposure bug

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,2 +1,2 @@
-<character-select ng-if="stateChangeService.playerState === 'characterSelect'"></character-select>
-<fight-display ng-if="stateChangeService.playerState === 'fight'"></fight-display>
+<character-select ng-if="main.stateChangeService.playerState === 'characterSelect'"></character-select>
+<fight-display ng-if="main.stateChangeService.playerState === 'fight'"></fight-display>
