fight log styling

--- a/src/app/components/alliesFightDisplay/alliesFightDisplay.html
+++ b/src/app/components/alliesFightDisplay/alliesFightDisplay.html
@@ -23,6 +23,8 @@
         </div>
       </div>
 
+      <button class="btn" ng-click="alliesFightDisplay.hurtMe(ally)">Hurt Me</button>
+
       <div class="text-center">
         <div class="center-me dropup"
              uib-dropdown>
