--- a/src/app/components/fightDisplay/fightDisplay.html
+++ b/src/app/components/fightDisplay/fightDisplay.html
@@ -3,7 +3,8 @@
 <div ng-include="'app/components/fightQueue/fightQueue.html'"></div>
 
 <div class="fight-log">
-  <p ng-repeat="message in fight.fightLog">{{ message }}</p>
+  <p ng-repeat="entry in fight.fightLog | orderBy : '-'"
+     ng-class="{'text-muted' : entry.id < fight.fightLog.length - 3}">{{ entry.message }}</p>
 </div>
 
 
