--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -74,7 +74,7 @@
   border-radius: 10px;
   position: fixed;
   top: 28%;
-  padding: 0 15px;
+  padding: 15px;
   overflow: scroll;
   right: 20px;
   width: 65%;
