got watch working

--- a/src/app/components/alliesFightDisplay/alliesFightDisplay.html
+++ b/src/app/components/alliesFightDisplay/alliesFightDisplay.html
@@ -36,7 +36,8 @@
                     </button>
                     <ul uib-dropdown-menu>
                         <li class="text-center" ng-repeat="move in ally.moves">
-                            <a ng-click="alliesFightDisplay.selectMove(move)">{{ move }}</a>
+                            <a ng-click="alliesFightDisplay.selectMove(move)">
+                              {{ move }}</a>
                         </li>
                     </ul>
                 </div>
