player can now 'win' the fight

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,2 +1,3 @@
 <character-select ng-if="main.stateChangeService.playerState === 'characterSelect'"></character-select>
 <fight-display ng-if="main.stateChangeService.playerState === 'fight'"></fight-display>
+<fight-summary ng-if="main.stateChangeService.playerState === 'fightSummary'"></fight-summary>
