progressTracker controls the flow of the overall game

--- a/src/app/components/fightSummary/fightSummary.html
+++ b/src/app/components/fightSummary/fightSummary.html
@@ -1,5 +1,5 @@
 <h1 class="text-center">Victory!</h1>
 
 <div class="text-center">
-  <button class="btn btn-success text-center">Continue</button>
+  <button class="btn btn-success text-center" ng-click="fightSummary.continue()">Continue</button>
 </div>
