--- a/src/app/components/enemiesFightDisplay/enemiesFightDisplay.html
+++ b/src/app/components/enemiesFightDisplay/enemiesFightDisplay.html
@@ -3,7 +3,7 @@
     <div class="fight-card"
          ng-style="{width: enemiesFightDisplay.cardWidth}"
          ng-repeat="enemy in enemiesFightDisplay.enemies"
-         ng-if="enemy.active"
+         ng-if="enemy.status === 'alive'"
          ng-class="{'border-pulse' : enemy.id === fight.queuePool[0].id}"
          ng-click="enemiesFightDisplay.allyAttackEnemy(enemy)">
       <h5>{{ enemy.name }}</h5>
