--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -2,3 +2,4 @@
 <fight-display ng-if="main.stateChangeService.playerState === 'fight'"></fight-display>
 <fight-summary ng-if="main.stateChangeService.playerState === 'fightSummary'"></fight-summary>
 <story-text ng-if="main.stateChangeService.playerState === 'story'"></story-text>
+<pre-fight-screen ng-if="main.stateChangeService.playerState === 'prefight'"></pre-fight-screen>
