--- a/src/app/components/enemiesFightDisplay/enemiesFightDisplay.html
+++ b/src/app/components/enemiesFightDisplay/enemiesFightDisplay.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="fight-bar enemies-fight-bar">
-    <div class="fight-card"
+    <div class="card fight-card"
          ng-style="{width: enemiesFightDisplay.cardWidth}"
          ng-repeat="enemy in enemiesFightDisplay.enemies"
          ng-if="enemy.status === 'alive'"
