--- a/src/app/components/characterSelect/characterSelect.html
+++ b/src/app/components/characterSelect/characterSelect.html
@@ -1,18 +1,27 @@
 <h1 class="text-center">Select a class for {{ characterSelect.newAlly.name }}</h1>
-<div class="text-center">
+<div class="text-center row">
   <div ng-repeat="build in characterSelect.newAlly.builds"
-       class="fight-card"
+       class="card class-card"
        ng-click="characterSelect.makeActiveSelection(build)"
        ng-class="{'active-card' : characterSelect.activeSelection === build}">
     <h3 class="text-center">{{ build.name }}</h3>
-    <ul>
-      <li>Health : {{ build.baseStats.maxHealth }}</li>
-      <li>Energy : {{ build.baseStats.maxEnergy }}</li>
-      <li>Strength : {{ build.baseStats.strength }}</li>
-      <li>Speed : {{ build.baseStats.speed }}</li>
-      <li>Defense : {{ build.baseStats.defense }}</li>
-    </ul>
-    <p>{{ build.description }}</p>
+
+    <div class="description-container">
+      <p>{{ build.description }}</p>
+    </div>
+    <h4 class="text-center">Base Stats</h4>
+      <ul>
+        <li>Health : {{ build.baseStats.maxHealth }}</li>
+        <li>Energy : {{ build.baseStats.maxEnergy }}</li>
+        <li>Strength : {{ build.baseStats.strength }}</li>
+        <li>Speed : {{ build.baseStats.speed }}</li>
+        <li>Defense : {{ build.baseStats.defense }}</li>
+      </ul>
+    <h4 class="text-center">Moves</h4>
+      <ul>
+        <li ng-repeat="move in build.moves">{{ move[0] }}</li>
+        <!--TODO these should be followed by a description of the move. -->
+      </ul>
   </div>
 </div>
 
