--- a/src/app/components/fightDisplay/fightDisplay.html
+++ b/src/app/components/fightDisplay/fightDisplay.html
@@ -5,7 +5,8 @@
 <div class="fight-log">
   <p ng-repeat="entry in fight.fightLog | orderBy : '-'"
      ng-class="{'text-muted' : entry.id < fight.fightLog.length - 3}"
-     class="flash-in">{{ entry.message }}</p>
+     class="flash-in">{{ ::entry.message }}</p>
+  <!--TODO This is utilizing a lot of watchers. Should be bound only once.-->
 </div>
 
 
