--- a/src/app/components/characterSelect/characterSelect.html
+++ b/src/app/components/characterSelect/characterSelect.html
@@ -16,6 +16,7 @@
         <li>Strength : {{ build.baseStats.strength }}</li>
         <li>Speed : {{ build.baseStats.speed }}</li>
         <li>Defense : {{ build.baseStats.defense }}</li>
+        <li>Intellect : {{ build.baseStats.intellect }}</li>
       </ul>
     <h4 class="text-center">Moves</h4>
       <ul>
