--- a/src/app/components/storyText/storyText.html
+++ b/src/app/components/storyText/storyText.html
@@ -1,4 +1,5 @@
-<div class="text-center">
+<h1 class="text-center">Story</h1>
+<div class="text-block text-center">
   <p ng-repeat="text in storyText.storyTexts[storyText.storyProgress]">{{ text }}</p>
 </div>
 
