--- a/src/app/components/fightSummary/fightSummary.html
+++ b/src/app/components/fightSummary/fightSummary.html
@@ -1,9 +1,17 @@
 <div ng-if="fightSummary.battleWon">
   <h1 class="text-center">Victory!</h1>
 
-  <p class="text-center">Total Experience: {{ fightSummary.experienceAwarded }}</p>
+  <div class="text-block">
+    <h4 class="text-center">Experience Awarded: {{ fightSummary.experienceAwarded }}</h4>
 
-  <p class="text-center">Experience to Each: {{ fightSummary.experienceToEach }}</p>
+    <h4 class="text-center">Experience to Each: {{ fightSummary.experienceToEach }}</h4>
+
+    <div ng-repeat="ally in fightSummary.activeAllies">
+      <p>{{ ally.name }} Lvl. {{ ally.level }} <span ng-if="ally.leveledUp" class="text-success">Level Up!</span></p>
+      <uib-progressbar max="ally.expNeeded" value="ally.exp" type="info">{{ally.exp}} / {{ ally.expNeeded }}</uib-progressbar>
+    </div>
+
+  </div>
 
   <div class="text-center">
     <button class="btn btn-success text-center" ng-click="fightSummary.continue()">Continue</button>
@@ -13,7 +21,9 @@
 <div ng-if="!fightSummary.battleWon">
   <h1 class="text-center">Defeated</h1>
 
-  <h3>You lost and you suck.</h3>
+  <div class="text-block">
+    <h3>You lost and you suck.</h3>
+  </div>
 
 
   <div class="text-center">
