--- a/src/app/components/preFightScreen/preFightScreen.html
+++ b/src/app/components/preFightScreen/preFightScreen.html
@@ -1,8 +1,12 @@
 <h1 class="text-center">Pre-Fight Screen</h1>
 
-<h3>Here would be information about your characters. You can make last minute changes here.</h3>
+<div class="text-block">
 
-<h3>Here would be information about your opponents.</h3>
+  <h3>Here would be information about your characters. You can make last minute changes here.</h3>
+
+  <h3>Here would be information about your opponents.</h3>
+
+</div>
 
 <div class="text-center">
   <button class="btn btn-primary" ng-click="preFight.readyUp()">Ready</button>
