--- a/src/app/components/storyText/storyText.html
+++ b/src/app/components/storyText/storyText.html
@@ -1,9 +1,9 @@
-<h1 class="text-center">Story</h1>
-<div class="text-block text-center">
-  <p ng-repeat="text in storyText.storyTexts[storyText.storyProgress]">{{ text }}</p>
+<h1 class="text-center">{{ storyText.storyTexts[storyText.storyProgress][0][0] }}</h1>
+<div class="text-block">
+  <p ng-repeat="text in storyText.storyTexts[storyText.storyProgress][1]">{{ text }}</p>
+  <div class="text-center">
+    <button class="btn btn-success"
+            ng-click="storyText.continue()">Continue</button>
+  </div>
 </div>
 
-<div class="text-center">
-  <button class="btn btn-success"
-          ng-click="storyText.continue()">Continue</button>
-</div>
