--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -3,3 +3,4 @@
 <fight-summary ng-if="main.stateChangeService.playerState === 'fightSummary'"></fight-summary>
 <story-text ng-if="main.stateChangeService.playerState === 'story'"></story-text>
 <pre-fight-screen ng-if="main.stateChangeService.playerState === 'prefight'"></pre-fight-screen>
+<start-screen ng-if="main.stateChangeService.playerState === 'startScreen'"></start-screen>
