--- a/src/app/components/enemiesFightDisplay/enemiesFightDisplay.html
+++ b/src/app/components/enemiesFightDisplay/enemiesFightDisplay.html
@@ -15,6 +15,8 @@
           {{ enemy.stats.health }}/{{ enemy.stats.maxHealth }}
         </div>
       </div>
+      <h6 class="text-center">STR : {{ enemy.stats.strength }} &nbsp; | &nbsp; SPD : {{ enemy.stats.speed }}
+        &nbsp; | &nbsp; DEF : {{ enemy.stats.defense }} &nbsp; | &nbsp; INT: {{ enemy.stats.intellect }}</h6>
     </div>
   </div>
 </div>
