--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -14,6 +14,16 @@
   display: none;
 }
 
+
+.vertical-center {
+  min-height: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .description-container {
   min-height: 80px;
 }
@@ -65,11 +75,11 @@
 .active-card {
   border: 3px solid gold;
   outline: none;
-
 }
 
 .text-block {
   width: 70%;
+  max-width: 700px;
   border: 3px solid gray;
   padding: 1em;
   border-radius: 10px;
@@ -77,6 +87,10 @@
 }
 
 .disabled-link {
+  pointer-events: none;
+}
+
+.disabled {
   pointer-events: none;
 }
 
