--- a/src/app/components/characterSelect/characterSelect.html
+++ b/src/app/components/characterSelect/characterSelect.html
@@ -6,6 +6,10 @@
        ng-class="{'active-card' : characterSelect.activeSelection === build}">
     <h3 class="text-center">{{ build.name }}</h3>
 
+    <div class="text-center select-class-icon">
+      <span ng-class="build.icon"></span>
+    </div>
+
     <div class="description-container">
       <p>{{ build.description }}</p>
     </div>
