--- a/src/app/components/alliesFightDisplay/alliesFightDisplay.html
+++ b/src/app/components/alliesFightDisplay/alliesFightDisplay.html
@@ -32,7 +32,7 @@
             <h6 class="text-center">STR : {{ ally.stats.strength }} &nbsp; | &nbsp; SPD : {{ ally.stats.speed }}
               &nbsp; | &nbsp; DEF : {{ ally.stats.defense }} &nbsp; | &nbsp; INT: {{ ally.stats.intellect }}</h6>
 
-            <div class="text-center">
+            <!--<div class="text-center">
                 <div class="center-me dropup"
                      uib-dropdown>
                     <button role="button"
@@ -51,7 +51,19 @@
                         </li>
                     </ul>
                 </div>
+            </div>-->
+          <!--This may still be useful when the list of moves is too long-->
+
+          <div class="text-center">
+            <div class="btn-group">
+              <button ng-repeat="move in ally.moves"
+                      class="btn btn-default"
+                      ng-class="{'disabled' : (ally.id !== fight.queuePool[0].id || ally.status !== 'alive' || alliesFightDisplay.movesService.selectedMove !== '')}"
+                      ng-if="ally.level >= move[1]"
+                      ng-click="alliesFightDisplay.selectMove(move[0])">{{ move[0] }}</button>
             </div>
+          </div>
+
         </div>
     </div>
 </div>
