--- a/src/app/components/preFightScreen/preFightScreen.html
+++ b/src/app/components/preFightScreen/preFightScreen.html
@@ -18,11 +18,8 @@
     <p>STR : {{ enemy.stats.strength }} &nbsp; | &nbsp; SPD : {{ enemy.stats.speed }}
       &nbsp; | &nbsp; DEF : {{ enemy.stats.defense }} &nbsp; | &nbsp; INT: {{ enemy.stats.intellect }}</p>
   </div>
-
-
-  <div>
-    <button class="btn btn-success" ng-click="preFight.readyUp()">Ready</button>
-  </div>
-
+</div>
+<div class="text-center">
+  <button class="btn btn-success" ng-click="preFight.readyUp()">Ready</button>
 </div>
 
