--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -4,3 +4,6 @@
 <story-text ng-if="main.stateChangeService.playerState === 'story'"></story-text>
 <pre-fight-screen ng-if="main.stateChangeService.playerState === 'prefight'"></pre-fight-screen>
 <start-screen ng-if="main.stateChangeService.playerState === 'startScreen'"></start-screen>
+<main-menu ng-if="main.stateChangeService.playerState === 'mainMenu'"></main-menu>
+<equipment ng-if="main.stateChangeService.playerState === 'equipment'"></equipment>
+<store ng-if="main.stateChangeService.playerState === 'store'"></store>
